fixed bugreports layout issues. fixed spinner animation dysplaying

--- a/widgets/brand_widgets/KelVPN/style.css
+++ b/widgets/brand_widgets/KelVPN/style.css
@@ -1261,6 +1261,13 @@
 	max-height: 160pt;
 }
 
+.bugrep-result-container
+{
+	height: 224pt;
+	min-height: 224pt;
+	max-height: 224pt;
+}
+
 /****************************************************
  * Purchase
  ***************************************************/
